added forum threads

--- a/app/assets/stylesheets/forums.scss
+++ b/app/assets/stylesheets/forums.scss
@@ -31,3 +31,18 @@
     box-shadow: -5px 5px $main-pink;
   }
 }
+
+.forum-threads {
+  margin-top: 20px;
+  .card {
+    margin: 5px 0;
+    border: 2px solid $main-blue;
+    border-radius: 10px;
+    color: #4a4a4a;
+    box-shadow: -2px 2px $main-blue;
+  }
+
+  .column {
+    padding: 5px;
+  }
+}
