--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -2,6 +2,30 @@
   <h1 class='title forum-title'><%= @forum.name %></h1>
   <p>description</p>
   <hr />
-  <p>No posts here!</p>
-</div>
+  <button type="button" class="button">New Thread</button>
+  <% if @threads.size == 0 %>
+    <p>No posts here!</p>
+  <% else %>
+    <div class='forum-threads'>
+      <% @threads.each do |thread| %>
+        <div class='card'>
+          <div class='card-content'>
+            <div class='columns'>
+              <div class='column is-8'>
+                <p><%= thread.title %></p>
+              </div>
+              <div class='column is-2'>
+                <p>username</p>
+              </div>
+              <div class='column is-2'>
+                <p>1/1/2018 12:00 AM</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
+    
+</button>
 
