--- a/app/assets/stylesheets/forums.scss
+++ b/app/assets/stylesheets/forums.scss
@@ -24,15 +24,10 @@
   font-weight: 500;
   box-shadow: -5px 5px $main-blue;
 
-  transition: all 0.1s ease-in-out;
-
-  &:hover {
-    border: 2px solid $main-pink;
-    box-shadow: -5px 5px $main-pink;
-  }
+  @include pink-hover-transition;
 }
 
-.forum-threads {
+.forum-posts {
   margin-top: 20px;
   .card {
     margin: 5px 0;
@@ -40,9 +35,22 @@
     border-radius: 10px;
     color: #4a4a4a;
     box-shadow: -2px 2px $main-blue;
+
+    @include pink-hover-transition;
   }
 
   .column {
     padding: 5px;
   }
+}
+
+.post-title-link {
+  color: $dark-blue;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.comment-bubble {
+  color: rgba(0, 97, 189, 0.4);
 }
